# Polaris

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/polaris_core/: __init__.py  cli.py  config.py  context.py  exceptions.py  factory.py  logging_utils.py  model_registry.py  models.py  providers.py  retrieval.py  service.py
src/polaris_core/chat/: context.py  conversation.py  profiles.py  prompts.py  service.py
src/polaris_core/docs/: README.md  ddocs.txt
src/polaris_core/llm/: logging.py  providers.py
src/polaris_core/retrieval/: __init__.py
tests/: test_config.py  test_factory.py  test_logging_utils.py  test_retrieval.py  test_service.py
