[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-core"
version = "0.1.0"
description = "UI-independent AI chatbot core with geophysics profile and local context retrieval."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "GIECAR" },
]
keywords = ["ai", "chatbot", "geophysics", "rag", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pymupdf>=1.24"]

[project.optional-dependencies]
llm = ["litellm>=1.83.7"]
dev = ["pytest>=8", "build>=1.2", "twine>=6.0"]

[project.scripts]
polaris = "polaris_core.cli:main"

[project.urls]
Homepage = "https://github.com/GIECAR/PolarisCore"
Repository = "https://github.com/GIECAR/PolarisCore"
Issues = "https://github.com/GIECAR/PolarisCore/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
polaris_core = [
    "docs/*.pdf",
    "docs/*.txt",
    "docs/*.md",
    "docs/*.rst",
    "docs/**/*.pdf",
    "docs/**/*.txt",
    "docs/**/*.md",
    "docs/**/*.rst",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
